<resources>
    <string name="app_name">UberByKotlin</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continueText">Continue</string>
    <string name="registerText">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
</resources>