<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uber_move"
            android:text="@string/registerText"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/continueText" />


</RelativeLayout>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_begin="205dp" />-->
<!--    <TextView-->
<!--        android:id="@+id/tvBanner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:fontFamily="@font/uber_move"-->
<!--        android:text="@string/registerText"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/edtFirstName"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:hint="@string/first_name"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvBanner"-->
<!--        app:layout_constraintEnd_toStartOf="@id/guideline"/>-->

<!--    <EditText-->
<!--        android:id="@+id/edtLastName"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:hint="@string/last_name"-->
<!--        app:layout_constraintStart_toEndOf="@id/guideline"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvBanner" />-->

<!--    <EditText-->
<!--        android:id="@+id/edtPhoneNumber"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/phone_number"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.961"-->
<!--        app:layout_constraintTop_toBottomOf="@id/edtFirstName"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:layout_editor_absoluteY="93dp" />-->

<!--    <Button-->
<!--        android:id="@+id/btnRegister"-->
<!--        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_margin="16dp"-->
<!--        android:text="@string/continueText"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->